# sysom-ai

./: README.md
mcp/: .gitignore  Dockerfile  ENV_CONFIG.md  LICENSE  README.md  README_OLLAMA_AGENT.md  ollama_agent.py  ollama_agent_advanced.py  pyproject.toml  requirements.txt  sysom_main_mcp.py
mcp/src/tests/: test_am_mcp.py  test_client.py  test_crash_agent_mcp.py  test_io_diag_mcp.py  test_mem_diag_mcp.py  test_net_diag_mcp.py  test_other_diag_mcp.py  test_sched_diag_mcp.py  test_sysom_main_mcp.py
mcp/src/tools/: __init__.py  am_mcp.py  crash_agent_mcp.py  initial_sysom_mcp.py  io_diag_mcp.py  mem_diag_mcp.py  metrics_mcp.py  net_diag_mcp.py  other_diag_mcp.py  sched_diag_mcp.py
mcp/src/tools/lib/: __init__.py  am_helper.py  api_registry.py  crash_agent_helper.py  diagnosis_helper.py  initial_helper.py  logger_config.py  mcp_helper.py  openapi_client.py  openapi_utils.py  permission_helper.py  service_config.py
skills/alibabacloud-sysom-diagnosis/: SKILL.md
skills/alibabacloud-sysom-diagnosis/references/: classify-output-guide.md  deep-actions.md  memory-triage.md  non-memory-triage.md  parameter-guide.md  ram-policies.md  report-interpretation.md  supported-environments.md
skills/alibabacloud-sysom-inspection/: SKILL.md  related_apis.yaml
skills/alibabacloud-sysom-inspection/references/: ram-policies.md
skills/alibabacloud-sysom-inspection/scripts/: init.sh  osops.sh  pyproject.toml  requirements.txt
skills/alibabacloud-sysom-inspection/scripts/sysom_cli/: __main__.py
skills/alibabacloud-sysom-inspection/scripts/sysom_cli/inspection/: command.py
skills/alibabacloud-sysom-inspection/scripts/sysom_cli/lib/: auth.py  openapi.py
