[project]
name = "sysom-mcp"
version = "0.1.0"
description = "SysOM MCP - 基于 Model Context Protocol 的系统诊断工具集，为 AI 助手提供系统运维和诊断能力"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typing-extensions==4.15.0",
    "attrs==25.3.0",
    "cffi==1.17.1",
    "aiofiles==24.1.0",
    "anyio==4.9.0",
    "aiohttp==3.12.2",
    "asyncer==0.0.8",
    "sqlalchemy==2.0.41",
    "fastapi==0.115.12",
    "gunicorn==23.0.0",
    "PyJWT==2.10.1",
    "PyMySQL==1.1.1",
    "python-multipart==0.0.20",
    "requests==2.32.3",
    "redis==6.1.0",
    "schedule==1.2.2",
    "uvicorn==0.38.0",
    "pyyaml==6.0.2",
    "psutil==7.0.0",
    "confluent-kafka==2.10.0",
    "oss2==2.19.1",
    "rule_engine==4.5.3",
    "aiomysql==0.2.0",
    "httpx==0.28.1",
    "async-generator==1.10",
    "asgiref==3.8.1",
    "numpy==2.2.6",
    "aiosqlite==0.21.0",
    "alibabacloud_sts20150401==1.1.6",
    "alibabacloud-oss-v2==1.1.3",
    "alibabacloud-sysom20231230==1.14.0",
    "agentscope==1.0.8",
    "fastmcp==2.13.1",
    "mcp==1.22.0",
    "python-dotenv",
    "openai==2.8.1",
    "distro==1.9.0",
    "jiter==0.12.0",
    "tqdm==4.67.1",
    "httpx-sse==0.4.3",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "pydantic-settings==2.12.0",
    "referencing==0.36.2",
    "rpds-py==0.29.0",
    "sse-starlette==3.0.3",
    "inflection==0.5.1",
    "openapi==2.0.0",
    "SecretStorage==3.5.0",
    "authlib==1.6.5",
    "backports.tarfile==1.2.0",
    "beartype==0.22.6",
    "cachetools==6.2.2",
    "cyclopts==4.3.0",
    "diskcache==5.6.3",
    "dnspython==2.8.0",
    "docstring-parser==0.17.0",
    "docutils==0.22.3",
    "email-validator==2.3.0",
    "exceptiongroup==1.3.1",
    "importlib_metadata==8.7.0",
    "jaraco.classes==3.4.0",
    "jaraco.context==6.0.1",
    "jaraco.functools==4.3.0",
    "jeepney==0.9.0",
    "jsonschema-path==0.3.4",
    "keyring==25.7.0",
    "markdown-it-py==4.0.0",
    "mdurl==0.1.2",
    "more-itertools==10.8.0",
    "openapi-pydantic==0.5.1",
    "pathable==0.4.4",
    "pathvalidate==3.3.1",
    "platformdirs==4.5.0",
    "py-key-value-aio==0.2.8",
    "py-key-value-shared==0.2.8",
    "pygments==2.19.2",
    "pyperclip==1.11.0",
    "rich==14.2.0",
    "rich-rst==1.3.2",
    "zipp==3.23.0",
    "aioitertools==0.13.0",
    "anthropic==0.75.0",
    "bidict==0.23.1",
    "cached-property==2.0.1",
    "dashscope==1.25.2",
    "googleapis-common-protos==1.72.0",
    "grpcio==1.76.0",
    "json5==0.12.1",
    "json_repair==0.54.2",
    "opentelemetry-api==1.38.0",
    "opentelemetry-exporter-otlp==1.38.0",
    "opentelemetry-exporter-otlp-proto-common==1.38.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.38.0",
    "opentelemetry-exporter-otlp-proto-http==1.38.0",
    "opentelemetry-proto==1.38.0",
    "opentelemetry-sdk==1.38.0",
    "opentelemetry-semantic-conventions==0.59b0",
    "protobuf==6.33.1",
    "python-datauri==3.0.2",
    "python-engineio==4.12.3",
    "python-socketio==5.15.0",
    "regex==2025.11.3",
    "shortuuid==1.0.13",
    "simple-websocket==1.1.0",
    "sounddevice==0.5.3",
    "tiktoken==0.12.0",
    "websocket-client==1.9.0",
    "wsproto==1.3.2",
]
